Finished my first ever website

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1><span class="name_highlight">MD. Sabbirul Islam Sun</span> Website</h1>
             <h3>World Class Professional Devolopper</h3>
             <p>My name is MD. Sabbirul Islam Sun. I'm a student at Bangladesh University of Business and Technology. I'm in Final year student. My home town in Sirajganj. </p>
-            <a class="link_button" target="_blank" href="https://www.facebook.com/sabbir1919">Download Resuse</a>
+            <a class="link_button" target="_blank" href="https://www.facebook.com/sabbir1919">Click Here</a>
         </div>
         <div class="half-width">
             <img src="images/profile1.png" alt="">
@@ -28,30 +28,27 @@
             <img src="images/profile1.png" alt="">
         </div>
         <div class="half-width">
-            <h1>Big Dream</h1>
-            <h3><span class="name_highlight">Becomes No one Devolopper</span></h3>
-            <p class="align">Good morning/afternoon, sir /mam.
-
-                First of all, I want to thank you for giving me this opportunity infront of you. Myself JAY TANDEL.I belongs to a small village in valsad which is located in Gujarat. I have done my SSC with 70% and HSC with 55% from Bai Ava Bai high school which is located in valsad, Gujarat. Recently, I have done Bachelor's of Engineering with 70% in Mechanical Engineering at Government College Bharuch. </p>
-            <a class="link_button" target="_blank" href="https://www.facebook.com/sabbir1919">Click Me</a>
+            <h2>Big Dream</h2>
+            <h3>Become a Web Devolopper</h3>
+            <p>My name is MD. Sabbirul Islam Sun. I'm a student at Bangladesh University of Business and Technology. I'm in Final year student. My home town in Sirajganj.</p>
+            <a class="link_button" target="_blank" href="www.facebook.com">Download Resume</a>
         </div>
     </section>
     <section class="experience-area">
         <h2>Experiences</h2>
         <div id="full-stack" class="half-width single-experience">
-            <h1>Full Stack Web Dev</h1>
-            <h3 class="name_highlight">2021 - Present | Pro Level Devolopper</h3>
-            <p>Good morning/afternoon, sir /mam.
-
-                First of all, I want to thank you for giving me this opportunity infront of you. Myself JAY TANDEL.I belongs to a small village in valsad which is located in Gujarat. I have done my SSC with 70% and HSC with 55% from Bai Ava Bai high school which is located in valsad, Gujarat. Recently, I have done Bachelor's of Engineering with 70% in Mechanical Engineering at Government College Bharuch.</p>
+            <h2>Full Stack Web</h2>
+            <h3 class="name_highlight">2022 | Web Devolopper</h3>
+            <p>My name is MD. Sabbirul Islam Sun. I'm a student at Bangladesh University of Business and Technology. I'm in Final year student. My home town in Sirajganj.</p>
         </div>
         <div id="baby-web" class="half-width single-experience">
-            <h1>Baby Web Devolopper</h1>
-            <h3 class="name_highlight">2021 - Present | Pro Level Programmer</h3>
-            <p class="align">Good morning/afternoon, sir /mam.
-
-                First of all, I want to thank you for giving me this opportunity infront of you. Myself JAY TANDEL.I belongs to a small village in valsad which is located in Gujarat. I have done my SSC with 70% and HSC with 55% from Bai Ava Bai high school which is located in valsad, Gujarat. Recently, I have done Bachelor's of Engineering with 70% in Mechanical Engineering at Government College Bharuch.</p>
+            <h2>Baby Dev</h2>
+            <h3 class="name_highlight">2022 | Web Devolopper</h3>
+            <p>My name is MD. Sabbirul Islam Sun. I'm a student at Bangladesh University of Business and Technology. I'm in Final year student. My home town in Sirajganj.</p>
         </div>
     </section>
+    <footer>
+        <p>Copyright, all rights resevered.</p>
+    </footer>
 </body>
 </html>
